# Eternite

./: .clang-format  .gitignore  .gitmodules  C++ Notes.txt  CMakeLists.txt  README.md  azure-pipelines.yml  imgui.ini
Client/: CMakeLists.txt
Client/Source/: Client.cpp
Client/Source/Utils/: Utils.h
Config/: Settings.ini
Content/Metadata/: Metadata.rc
Data/: Settings.ini
Data/Metadata/: Metadata.rc
Data/Models/Leblanc/: Leblanc_Skin04.gltf
Data/Packs/: Common.pack  Test.pack
Data/Scenes/: Bruh.ascn  Default.ascn
Docs/: Mobile.md  PackFiles.md  Requirements.md
Editor/: CMakeLists.txt
Editor/Source/: Editor.cpp  EditorLayer.cpp  EditorLayer.h
Editor/Source/Behaviours/: EditorCameraLogic.h
Editor/Source/FileDialog/: FileDialog.h  FileDialogWindows.cpp
Editor/Source/Panels/: HierarchyPanel.cpp  HierarchyPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Editor/Source/Scripts/: CameraController.h  EditorCameraController.h
Engine/: CMakeLists.txt
Engine/Source/: Apex.h  Apex.hpp  Engine.hpp  axpch.cpp  axpch.hpp
Engine/Source/Apex/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Input.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Window.hpp
Engine/Source/Apex/Debug/: Instrumentor.hpp
Engine/Source/Apex/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Engine/Source/Apex/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
Engine/Source/Apex/Renderer/: Buffer.cpp  Buffer.hpp  FrameBuffer.hpp  GraphicsContext.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Renderer3D.hpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
Engine/Source/Apex/Scene/: Components.hpp  Entity.cpp
Engine/Source/Core/: Application.cpp  Application.h  Application.hpp  AssetManager.cpp  AssetManager.h  Core.h  Core.hpp  EntryPoint.h  HeadlessApp.cpp  HeadlessApp.h  HeadlessApplication.cpp  HeadlessApplication.h  Input.cpp  Input.h  Input.hpp  KeyCodes.h  Layer.cpp  Layer.h  Layer.hpp  LayerStack.cpp  LayerStack.h  LayerStack.hpp  Log.cpp  Log.h  Log.hpp  MouseButtonCodes.hpp  MouseCodes.h  Timestep.h  Timestep.hpp  Window.cpp  Window.h  Window.hpp
Engine/Source/Engine/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Log.cpp  Log.hpp
Engine/Source/Events/: ApplicationEvent.h  ApplicationEvent.hpp  Event.h  Event.hpp  KeyEvent.h  KeyEvent.hpp  MouseEvent.h  TouchEvent.h
Engine/Source/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiLayer.hpp  imgui_impl_raylib.h  rlImGui.cpp  rlImGui.h  rlImGuiColors.h
Engine/Source/Math/: Math.cpp  Math.h
Engine/Source/Physics/: ContactListener2D.cpp  ContactListener2D.h
Engine/Source/Platform/Desktop/: DesktopInput.cpp  DesktopWindow.cpp
Engine/Source/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
Engine/Source/Platform/Windows/: WindowsInput.cpp  WindowsInput.hpp  WindowsWindow.cpp  WindowsWindow.hpp
Engine/Source/Renderer/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.h  Camera.hpp  CameraController.cpp  CameraController.h  CameraController.hpp  FrameBuffer.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsContext.hpp  HandleImpl.h  HandleImpl.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  PerspectiveCameraController.cpp  PerspectiveCameraController.hpp  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer.hpp  RendererAPI.cpp  RendererAPI.h  RendererAPI.hpp  Shader.cpp  Shader.h  Shader.hpp  Texture.cpp  Texture.h  Texture.hpp  Uniform.h  Uniform.hpp  VertexArray.cpp  VertexArray.h  VertexArray.hpp
Engine/Source/Scene/: Components.cpp  Components.h  ComponentsGraphic.h  Entity.cpp  Entity.h  Entity.hpp  NativeBehaviour.h  NativeScript.h  Prefab.h  Scene.cpp  Scene.h  Scene.hpp  SceneSerializer.cpp  SceneSerializer.h
GameClient/: CMakeLists.txt
GameClient/Config/: Settings.ini
GameClient/Shaders/: StaticMesh.frag  StaticMesh.vert  Varying.def
GameClient/Source/: Client.cpp
GameClient/Source/Utils/: Utils.cpp
GameServer/: CMakeLists.txt
GameServer/Source/: Server.cpp
Licenses/: bgfx.txt
Runtime/: CMakeLists.txt
Runtime/Source/: Runtime.cpp
Scripts/: Build.sh  ShaderCompiler.bat  ShaderCompiler.py  TextureCompiler.bat  TextureCompiler.py
Scripts/CICD/: BuildClient.bat  BuildServer.sh
Server/: CMakeLists.txt
